primo commit progetto settimanale

--- a/m2/s2/progetto/package.json
+++ b/m2/s2/progetto/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "g3",
+  "dependencies": {
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1"
+  },
+  "name": "progetto",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "sass assets/sass/style.scss assets/css/style.css -w",
+    "compile": "sass assets/scss/style.scss assets/css/style.css -w",
     "compile-c": "sass assets/scss/style.scss assets/css/style.css --style compressed"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "bootstrap": "^5.3.2"
-  }
+  "description": ""
 }
