--- a/m2/s2/progetto/package.json
+++ b/m2/s2/progetto/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "sass assets/scss/style.scss assets/css/style.css -w",
-    "compile-c": "sass assets/scss/style.scss assets/css/style.css --style compressed"
+    "compile-c": "sass assets/scss/style.scss assets/css/style.min.css -w --style compressed"
   },
   "author": "",
   "license": "ISC",
