--- a/m3/s3/progetto/progetto/package.json
+++ b/m3/s3/progetto/progetto/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "backend": "json-server-auth db.json -w --delay 1000"
+    "backend": "json-server-auth db.json -w --delay 1000",
+    "fb": "firebase init",
+    "deploy": "ng build && firebase deploy"
   },
   "private": true,
   "dependencies": {
